<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robleo_description</name>
  <version>2.1.2</version>
  <description>
    3D models of the robleo for simulation and visualization
  </description>
  <maintainer email="projects@nobleo.nl">Petra vd Kerk</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
