<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>robleo_simulation</name>
  <version>1.1.1</version>
  <description>robleo ROS2 interface for Webots.</description>

  <maintainer email="projects@nobleo.nl">Petra vd Kerk</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>webots_ros2_control</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
